Versao do site criada pela bolsista SAE

--- a/contact.html
+++ b/contact.html
@@ -2,112 +2,129 @@
 
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Lib Miletus website">
-    <meta name="author" content="Edson Borin">
-    <!-- TODO: Replace this icon. -->
-    <link rel="icon" href="images/hpg_ico.ico">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="Lib Miletus website">
+  <meta name="author" content="Edson Borin">
+  <!-- TODO: Replace this icon. -->
+  <link rel="icon" href="images/hpg_ico.ico">
 
-    <!-- Bootstrap core CSS -->
-    <link href="./bootstrap-3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="./bootstrap-3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="./bootstrap-3.3.7/docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="./bootstrap-3.3.7/docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="jumbotron.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="./style/css/jumbotron.css" rel="stylesheet">
+  <link href="./style/css/navbar-fixed-top.css" rel="stylesheet">
 
-    <link href="navbar-fixed-top.css" rel="stylesheet">
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="./bootstrap-3.3.7/docs/assets/js/ie-emulation-modes-warning.js"></script>
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="./bootstrap-3.3.7/docs/assets/js/ie-emulation-modes-warning.js"></script>
+  <!-- nome na aba do navegador -->
+  <title>Contact</title>
 
-    <!-- nome na aba do navegador -->
-    <title>Contact</title>
+</head>
 
-  </head>
+<body>
 
-  <body>
-
-    <!-- NAVBAR -->
-    <!-------------------------------------------------------------------------------->
-    <nav class="navbar navbar-default navbar-fixed-top">
+ <!-- NAVBAR -->
+  <!-------------------------------------------------------------------------------->
+  <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
-	<a href="#" class="navbar-top"><img src="./images/logo_HPG_small.png" height=92px style="display: inline-block;"></a>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-bottom: 5px;">
+          <a href="./index.html" class="navbar-top"><img src="./images/hpg.png" style="height:90px;padding-top:20px;display: inline-block;"></a>
+        </div>
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-	    <span class="sr-only">Toggle navigation</span>
-	    <span class="icon-bar"></span>
-	    <span class="icon-bar"></span>
-	    <span class="icon-bar"></span>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+            aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-left">
-	    <li><a href="./index.html">Home</a></li>
-	    <li><a href="./people.html">People</a></li>
-	    <li><a href="./publications.html">Publications</a></li>
-	    <li><a href="./projects.html">Projects</a></li>
-	    <li class="active"><a href="#">Contact</a></li>
-          </ul>
-        </div><!--/.navbar-collapse -->
+        <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8" style="margin-top: 55px;">
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-left">
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./people.html">People</a></li>
+              <li><a href="./publications.html">Publications</a></li>
+              <li><a href="./projects.html">Projects</a></li>
+              <!-- <li><a href="./news.html">News</a></li> -->
+              <!-- <li><a href="./technologies.html">Technologies</a></li> -->
+              <li class="active"><a href="./contact.html">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+        <!--/.navbar-collapse -->
       </div> <!-- container -->
     </nav>
     <!-------------------------------------------------------------------------------->
 
+  <!-------------------------------------------------------------------------------->
+  <div class="container marketing">
 
-    <!-------------------------------------------------------------------------------->
-    <div class="container marketing">
+    <h2 class="page-header">Address and Contact</h2>
 
-      <!--..........................................................................-->
-      <p><h2 class="page-header">Address and Contact</h2></p>
+    <div class="row">
+      <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
-      <div class="row">
+        <h4 class="page-header" style="margin-top: 5%">Address</h4>
+        <div class="row" style="margin: 0%;">
+          <p align="justify">
+            R. Cora Coralina, 350
+          </p>
+          <p align="justify">
+            Cidade Universitária Campinas/SP Brazil
+          </p>
+          <p align="justify">
+            CEP 13083-896
+          </p>
+        </div>
 
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-	  <p>
-	    <h4>Address:</h4>
-	    R. Cora Coralina, 350<br/>
-	    Cidade Universitária Campinas/SP Brazil<br/>
-	    CEP 13083-896<br/>
-	  </p>
-	  <p>
-	   <br/><h4>Contact: </h4>
-	    Phone: +55 19 3521-1208<br/>
-	    E-mail: admin@ggaunicamp.com
-	  </p>
-	</div>
+        <h4 class="page-header">Contact</h4>
+        <div class="row" style="margin: 0%">
+          <p align="justify">
+            Phone: +55 19 3521-1208
+          </p>
+          <p align="justify">
+            E-mail: admin@ggaunicamp.com
+          </p>
+        </div>
+      </div>
 
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-	  <a href="https://www.google.com.br/maps/place/CEPETRO+-+Centro+de+Estudos+de+Petr%C3%B3leo/@-22.8159599,-47.0679805,16z/data=!4m5!3m4!1s0x94c8c15274582707:0xedbefbe7d570408c!8m2!3d-22.8129065!4d-47.0678437" target="_BLANK"><img src="./images/map.png "></a>
+      <div class="col-sm-8 col-md-8 col-lg-8 col-xl-8">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.718118458709!2d-47.07003774896385!3d-22.812906484986367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8c15274582707%3A0xedbefbe7d570408c!2sCEPETRO+-+Petroleum+Studies+Center!5e0!3m2!1sen!2sbr!4v1541529566862"
+          width="100%" height="323" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
 
-	</div>
-
-      </div> <!-- < class="row"> -->
+    </div> <!-- < class="row"> -->
 
 
-    </div><!-- /.container -->
-    <!-------------------------------------------------------------------------------->
+  </div><!-- /.container -->
+  <!-------------------------------------------------------------------------------->
 
-<!--
+  <!--
       <footer>
         <p>&copy; 2017 Edson Borin.</p>
       </footer>
 -->
 
 
-    <!-- Bootstrap core JavaScript
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="./bootstrap-3.3.7/assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="./bootstrap-3.3.7/dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="./bootstrap-3.3.7/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="./bootstrap-3.3.7/assets/js/vendor/jquery.min.js"><\/script>')</script>
+  <script src="./bootstrap-3.3.7/dist/js/bootstrap.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="./bootstrap-3.3.7/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
+</body>
+
 </html>
