--- a/src/common/projects-header.html
+++ b/src/common/projects-header.html
@@ -19,9 +19,9 @@
     <link href="./bootstrap-3.3.7/docs/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="jumbotron.css" rel="stylesheet">
+    <link href="./style/css/jumbotron.css" rel="stylesheet">
 
-    <link href="navbar-fixed-top.css" rel="stylesheet">
+    <link href="./style/css/navbar-fixed-top.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
