--- a/people.html
+++ b/people.html
@@ -320,8 +320,7 @@
           </tbody>
         </table>
         <p align="justify" style="margin-top: -10px; margin-bottom: 20px;">
-          PhD in Applied Mathematics at the Institute of Mathematics, Statistics and Scientific Computing at University
-          of Campinas (IMECC/UNICAMP).
+          PhD in Computer Science and Computational Mathematics at the University of São Paulo (USP-Brazil).
       </div>
 	
 	   <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
