--- a/people.html
+++ b/people.html
@@ -320,7 +320,7 @@
           </tbody>
         </table>
         <p align="justify" style="margin-top: -10px; margin-bottom: 20px;">
-          PhD in Computer Science and Computational Mathematics at the University of São Paulo (USP-Brazil).
+          PhD in Computer Science and Computational Mathematics at the University of São Paulo (ICMC/USP).
       </div>
 	
 	   <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
@@ -894,12 +894,12 @@
           <tbody>
             <tr>
               <td style="background:rgb(240,240,240);height:100px;width:90px">
-                <img src="images/people/marcelofilho.jpg" height="100px" width="75px" class="img-rounded" />
+                <img src="images/people/marcelofilho.png" height="100px" width="75px" class="img-rounded" />
               </td>
               <td style="vertical-align:middle; background:rgb(240,240,240)">
                 Marcelo Martins Vilela Filho
                 <br />Undergraduate Researcher
-                <br />m202619 at g.unicamp.br
+                <br />marcelo at ggaunicamp.com
               </td>
             </tr>
           </tbody>
@@ -911,7 +911,7 @@
           <tbody>
             <tr>
               <td style="background:rgb(240,240,240);height:100px;width:90px">
-                <img src="images/people/muriloguidetti.jpg" height="100px" width="75px" class="img-rounded" />
+                <img src="images/people/muriloguidetti.png" height="100px" width="75px" class="img-rounded" />
               </td>
               <td style="vertical-align:middle; background:rgb(240,240,240)">
                 Murilo Guidetti Andrietta
@@ -936,7 +936,7 @@
               <td style="vertical-align:middle; background:rgb(240,240,240)">
                 Naomi Takemoto
                 <br />Undergraduate Researcher
-                <br />naomitkm1 at gmail.com
+                <br />naomi at ggaunicamp.com
               </td>
             </tr>
           </tbody>
@@ -953,7 +953,7 @@
               <td style="vertical-align:middle; background:rgb(240,240,240)">
                 Pedro Rodrigo Ramos Morelli
                 <br />Undergraduate Researcher
-                <br />pedro.morelli96 at gmail.com
+                <br />pedromorelli at ggaunicamp.com
               </td>
             </tr>
           </tbody>
