--- a/people.html
+++ b/people.html
@@ -761,7 +761,7 @@
 	              </td>
 	              <td style="vertical-align:middle; background:rgb(240,240,240)">
 	                Otávio Oliveira Napoli
-	                <br />Geophysics Ph.D. Student
+	                <br />Computer Science Ph.D. Student
 	                <br />otavio.napoli at ggaunicamp.com
 	                <br /><a href="http://lattes.cnpq.br/6642011418568107" target="_blank">Lattes</a>
 	              </td>
