Added new publications

--- a/publications.html
+++ b/publications.html
@@ -80,6 +80,9 @@
       <span id="indice" class="anchor"></span>
 
       <div class="row" style="margin-top: 40px;">
+      
+      	<a href="#n2019" style="padding-left: 10px;">
+          2019
         <a href="#n2018" style="padding-left: 10px;">
           2018
         </a>
@@ -186,7 +189,20 @@
       </div>
 
       <div class="row">
-
+      
+      	<span id="n2019" class="anchor"></span>
+      	 <h3 class="page-header">2019<small><a href="#indice" style="padding-left: 20px;">Back to top</a></small></h3>
+      	  <p align="justify">
+      	  FACCIPIERI, JORGE H. ; Coimbra, Tiago A. ; BLOOT, RODRIGO . 
+      	  Stretch-free generalized normal moveout correction. GEOPHYSICAL PROSPECTING, v. 67, p. 52-68, 2019.
+		</p>
+		 <p align="justify">
+		 PISANI, FLÁVIA ; MARTINS DO ROSARIO, VANDERSON ; BORIN, EDSON . Fog vs. Cloud Computing: Should I Stay or Should I Go?. Future Internet, v. 11, p. 34, 2019.
+		</p>
+		 <p align="justify">
+		 WALDELAND, ANDERS U. ; COIMBRA, TIAGO A. ; FACCIPIERI, JORGE H. ; SOLBERG, ANNE H. SCHISTAD ; GELIUS, LEIV-J. . 
+		 Fast estimation of prestack Common Reflection Surface parameters. GEOPHYSICAL PROSPECTING, v. -, p. -, 2019.
+		</p>
         <span id="n2018" class="anchor"></span>
         <h3 class="page-header">2018<small><a href="#indice" style="padding-left: 20px;">Back to top</a></small></h3>
         <p align="justify">
