Edited digitations errors

--- a/publications.html
+++ b/publications.html
@@ -338,7 +338,7 @@
          Fast and robust Common Reflection Surface (CRS) parameter estimation. GEOPHYSICS, v. 82, p. 1-29, 2017.
         </p> 
         
-        <h4 class="page-header">Abstract</h4>
+        <h4 class="page-header">Abstracts</h4>
         
         <p align="justify">
           AULER, R. ; BORIN, E. . The case for flexible ISAs: unleashing hardware and software. In: 29th International
