--- a/people.html
+++ b/people.html
@@ -666,13 +666,13 @@
           <tbody>
             <tr>
               <td style="background:rgb(240,240,240);height:100px;width:90px">
-                <img src="images/people/semFoto.png" height="100px" class="img-rounded" />
+                <img src="images/people/antonio.carlos.png" height="100px" class="img-rounded" />
               </td>
               <td style="vertical-align:middle; background:rgb(240,240,240)">
                 Antonio Carlos Guimarães Junior
                 <br />Computer Science Ph.D. Student
                 <br />antonio at ggaunicamp.com
-                <!--  <br /><a href="..." target="_blank">Lattes</a> -->
+                <br /><a href="http://lattes.cnpq.br/3952604251815458" target="_blank">Lattes</a> 
               </td>
             </tr>
           </tbody>
