Edited people informations

--- a/people.html
+++ b/people.html
@@ -244,7 +244,7 @@
               </td>
               <td style="vertical-align:middle; background:rgb(240,240,240)">
                 Dany Rueda Serrano
-                <br />Seismic Processing Geophysicist
+                <br />Seismic Processing leader
                 <br />dany at ggaunicamp.com
                 <br /><a href="http://lattes.cnpq.br/4139869851016467" target="_blank">Lattes</a>
               </td>
@@ -592,7 +592,7 @@
                 <img src="images/people/alexandre.png" height="100px" width="75px"  class="img-rounded" />
               </td>
               <td style="vertical-align:middle; background:rgb(240,240,240)">
-                Dr. Alexandre William de Camargo
+                Dr. Alexandre William Camargo
                 <br />Researcher
                 <br />acamargo at ggaunicamp.com
                 <br /><a href="http://lattes.cnpq.br/6704642628733352" target="_blank">Lattes</a>
