update Team informations

--- a/team.html
+++ b/team.html
@@ -180,7 +180,7 @@
                 <div class="span4 aligncenter">
                   <h6><b>Dr. Jorge H. Faccipieri Junior</b></h6>
                   <p><b>Project Manager and Researcher</b></p>
-                  <p><i>jorge at ggaunicamp.com</i></p>
+                  <p><i>jorgehfj at unicamp.br</i></p>
                   <p>
                     <a href="http://lattes.cnpq.br/0902533917666605" target="_blank">Lattes</a>
                     <a href="http://www.researchgate.net/profile/Jorge_Faccipieri_Junior"
@@ -210,7 +210,7 @@
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Dr. Tiago Antonio Alves Coimbra</b></h6>
-                  <p><b>Lead Researcher</b></p>
+                  <p><b>Research Leader</b></p>
                   <p><i>coimbra at ggaunicamp.com</i></p>
                   <p>
                     <a href="http://lattes.cnpq.br/7393825867830586" target="_blank">Lattes</a>
@@ -340,7 +340,7 @@
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Caian Benedicto</b></h6>
-                  <p><b>Lead Software Developer</b></p>
+                  <p><b>Software Development Leader</b></p>
                   <p><i>caian at ggaunicamp.com</i></p>
                   <p>
                     <a href="http://lattes.cnpq.br/8674348451133485" target="_blank">Lattes</a>
@@ -685,7 +685,7 @@
                 </div>
                 <div class="span4 aligncenter">
                   <h6><b>Prof. Dr. Charles Boulhosa Rodamilans</b></h6>
-                  <p><b>Professor Dr. Mackenzie</b></p>
+                  <p><b>Researcher</b></p>
                   <p><i>charlesrodamilans at gmail.com</i></p>
                   <p><a href="http://lattes.cnpq.br/2322902706072097" target="_blank">Lattes</a></p>
                 </div>
@@ -803,7 +803,7 @@
                 <div class="span4 aligncenter">
                   <h6><b>Jeferson Rech Brunetta</b></h6>
                   <p><b>Computer Science Ph.D. Student</b></p>
-                  <p><i>jeferdjex at gmail.com</i></p>
+                  <p><i>jeferson at ggaunicamp.com</i></p>
                   <p>
                     <a href="http://lattes.cnpq.br/6853069528846411" target="_blank">Lattes</a>
                   </p>
@@ -864,7 +864,7 @@
                 <div class="span4 aligncenter">
                   <h6><b>Eva Maia Malta</b></h6>
                   <p><b>Computer Science M.Sc. Student</b></p>
-                  <p><i>eva.maia.malta at hotmail.com</i></p>
+                  <p><i>evamaia at ggaunicamp.com</i></p>
                   <p>
                     <a href="http://lattes.cnpq.br/3183898522744068" target="_blank">Lattes</a>
                   </p>
@@ -887,7 +887,7 @@
                 <div class="span4 aligncenter">
                   <h6><b>Jonlenes Silva de Castro</b></h6>
                   <p><b>Computer Science M.Sc. Student</b></p>
-                  <p><i>jonlenes at outlook.com</i></p>
+                  <p><i>jonlenes at ggaunicamp.com</i></p>
                   <p>
                     <a href="http://lattes.cnpq.br/7242698732966171" target="_blank">Lattes</a>
                   </p>
