detailing the acronyms of the tecnologies

--- a/technologies.html
+++ b/technologies.html
@@ -95,7 +95,7 @@
 
         <div class="row">
           <div class="span12">
-            <h3><strong>Zo Stacking</strong></h3>
+            <h3><strong>ZO Stacking</strong></h3>
             <div class="solidline"></div>
           </div>
         </div>
@@ -123,7 +123,7 @@
         <div class="row">
           <div class="span12">
             <div class="team-box thumbnail">
-              <h4><b>2D/3D CRS Stacking</b></h4>
+              <h4><b>2D/3D Common Reflection Surface (CRS) Stacking</b></h4>
               <p style="text-align: justify;">
                 The 2D/3D CRS Stacking is a multiparametric traveltime stacking for reflections. The
                 Common-Reflection-Surface (CRS) traveltime makes full use of redundancy available in the data, once it
@@ -143,7 +143,7 @@
         <div class="row">
           <div class="span12">
             <div class="team-box thumbnail">
-              <h4><b> 2D/3D DSR Stacking</b></h4>
+              <h4><b> 2D/3D Double Square Root (DSR) Stacking</b></h4>
               <p style="text-align: justify;">
                 The 2D/3D DSR Stacking performs the full stacking, in prestack domain, of diffractions considering the
                 Double Square Root (DSR) moveout.
@@ -160,7 +160,7 @@
         <div class="row">
           <div class="span12">
             <div class="team-box thumbnail">
-              <h4><b>2D/3D DSR Spreading</b></h4>
+              <h4><b>2D/3D Double Square Root (DSR) Spreading</b></h4>
               <p style="text-align: justify;">
                 The 2D/3D DSR Spreading technology allows the enhancement of diffractions. The stacking process uses a
                 DSR diffraction traveltime, in prestack domain The spreading procedure has a similar structure as the
@@ -182,7 +182,7 @@
 
         <div class="row">
           <div class="span12">
-            <h3><strong>FO Stacking and Regularization</strong></h3>
+            <h3><strong>Finite Offset (FO) Stacking and Regularization</strong></h3>
             <div class="solidline"></div>
           </div>
         </div>
@@ -190,7 +190,7 @@
         <div class="row">
           <div class="span12">
             <div class="team-box thumbnail">
-              <h4><b>2D/3D CRP Regularization</b></h4>
+              <h4><b>2D/3D Common Reflection Point (CRP) Regularization</b></h4>
               <p style="text-align: justify;">
                 The 2D/3D CRP Regularization technology is based on Common-reflection-point (CRP) Trajectories. This
                 approach ensures that only the amplitudes related to the same reflection point are considered on the
@@ -208,7 +208,7 @@
         <div class="row">
           <div class="span12">
             <div class="team-box thumbnail">
-              <h4><b>2D/3D CRP Spreading</b></h4>
+              <h4><b>2D/3D Common Reflection Point (CRP) Spreading</b></h4>
               <p style="text-align: justify;">
                 The 2D/3D CRP Spreading technology is based on Common-reflection-point (CRP) Trajectories allows for
                 reflection enhancement in prestack domain.
@@ -254,7 +254,7 @@
         <div class="row">
           <div class="span12">
             <div class="team-box thumbnail">
-              <h4><b>2D/3D CRP Time Migration</b></h4>
+              <h4><b>2D/3D Common Reflection Point (CRP) Time Migration</b></h4>
               <p style="text-align: justify;">
                 The 2D/3D CRP time migration performs a Kirchhoff-type time migration and velocity analysis with the use
                 of a Common-Reflection-Point (CRP) operator. Thus, a velocity model is obtained by analyzing CRP
